// Copyright 2021 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package recipes.build.chromium.builder_cache_prewarmer;

message InputProperties {
  message Builder {
    string builder_name = 1;
    string builder_group = 2;
  }

  // The builder providing the configuration to warm the cache with
  Builder builder_to_warm = 1;
}
